crates/stylex-shared/tests/transform_import_export_test/snapshots/fold__transform_import_export_test__stylex_imports__import_named.snap
---
source: crates/stylex-shared/tests/transform_import_export_test/stylex_imports.rs
expression: output
---
import { create, createTheme, defineConsts, defineVars, firstThatWorks, keyframes, positionTry, props, viewTransitionClass } from '@stylexjs/stylex';
export const constants = {
    mediaQuery: "@media (min-width: 768px)"
};
export const vars = {
    bar: "var(--x1hi1hmf)",
    __varGroupHash__: "xop34xu"
};
const styles = {
    root: {
        kKVMdj: "x1qar0u3",
        k9M3vk: "x7cint9",
        kMwMTN: "x1e2nbdu x14693no",
        kVAEAm: "x15oojuh",
        $$css: true
    }
};
const theme = {
    xop34xu: "xfnndu4 xop34xu",
    $$css: true
};
props(styles.root, theme);
