crates/stylex-shared/tests/transform_import_export_test/snapshots/fold__transform_import_export_test__stylex_imports__import_named_alias.snap
---
source: crates/stylex-shared/tests/transform_import_export_test/stylex_imports.rs
expression: output
---
import { create as _create, createTheme as _createTheme, defineConsts as _defineConsts, defineVars as _defineVars, firstThatWorks as _firstThatWorks, keyframes as _keyframes, positionTry as _positionTry, props as _props, viewTransitionClass as _viewTransitionClass } from '@stylexjs/stylex';
export const constants = {
    mediaQuery: "@media (min-width: 768px)"
};
export const vars = {
    bar: "var(--x1hi1hmf)",
    __themeName__: "xop34xu"
};
const styles = {
    root: {
        kKVMdj: "x1qar0u3",
        k9M3vk: "x7cint9",
        kMwMTN: "x1e2nbdu x14693no",
        kVAEAm: "x15oojuh",
        $$css: true
    }
};
const theme = {
    $$css: true,
    xop34xu: "xfnndu4 xop34xu"
};
_props(styles.root, theme);
