crates/stylex-shared/tests/transform_import_export_test/snapshots/fold__transform_import_export_test__stylex_imports__require_non_stylex.snap
---
source: crates/stylex-shared/tests/transform_import_export_test/stylex_imports.rs
expression: output
---
const { foo, bar } = require('other');
